<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@null"
    android:elevation="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:clickable="true"
        android:focusable="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ripple_bg"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/main_content_container"
            android:background="@drawable/activity_main_content_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:minHeight="150dp"
            android:padding="15dp">
            <TextView
                android:id="@+id/main_content_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="2"
                android:text="@string/main_content_title"
                android:textColor="#E65100"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/main_content_short_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:padding="8dp"
                android:text="@string/main_content_short_desc"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/main_content_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/main_content_desc"
                android:textSize="13sp" />
        </LinearLayout>



    </LinearLayout>


</LinearLayout>